Started refactor for configs